## GeoTag 4.8

### New Feature

* update CreateDate as well as Date/Time Original.  Dates are updated only
  when the user modifies the image timestamp.

* Warn the user if the Backup/Save folder contains more than 500 MB of images
  or if the images were added to the folder more than 7 days ago.
  
* gray out png files.  Exiftool can handle metadata in PNG files but
  finder/macOS can't.
  
* update exiftool to version 11.91

### Bug Fix

* Remember the column/sort direction when a user picls a column to order the
  images in the table. Sort by the remembered value when new images are
  opened.

* update the script use to build a release dmg

## GeoTag 4.7.1

### Bug Fix

* when changing or setting dates of a image only change/set the
  -DateTimeOriginal tag.  Leave the other dates alone.

## GeoTag 4.7

### New Feature

* Change map search to find Points of Interest in addition to addresses.

* When doing a map search the searched location will be applied to all
  selected images.  In previous versions a search would only position the
  map.

### Bug Fix

* Replace a call to fatalerror with an Alert notifying the user that a file
  could not be processed.

* Fix possible off-by-one when searching for a track point by timestamp

### Known Bugs

* [Developer bug] Trying to run any test cases will crash Xcode.  This may be
a side effect of running the Catalina Beta.

## GeoTag 4.6.2

* 4.6.2 is the same as 4.6.1, but with a notarized dmg file for hassle free
  installation on macOS Catalina.

## GeoTag 4.6.1

### Bug Fix

* Some GPX files may not contain any tracks.  Tell the user if no tracks were
  found and otherwise ignore the file.

* The GPS Date/Time value was not being updated in sidecar files.

## GeoTag 4.6

### New Features

* If a sidecar file exists metadata can be read from and updated metadata
  written to the sidecar file instead of the image file. This is controlled
  by a new preference item.  Files in the same folder as the image file with